# illuminate

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Caddyfile  Cargo.toml  DEPLOY.md  Dockerfile  Makefile  README.md  docker-compose.yml  docker-entrypoint.sh  illuminate.toml.example  package-lock.json
.github/workflows/: ci.yml  example-audit-pr.yml.example  release.yml
.illuminate/: illuminate.toml
.reflect/: reflect.db-shm  reflect.db-wal
api/: .dbmate.yml  go.mod  go.sum
api/db/: schema.sql
crates/illuminate-audit/: Cargo.toml
crates/illuminate-audit/src/: lib.rs  policy.rs  response.rs
crates/illuminate-audit/tests/: audit_tests.rs  confidence_tests.rs  config_reexport_tests.rs  config_tests.rs  convention_tests.rs  impact_tests.rs  negation_tests.rs  rationale_tests.rs  response_fields_tests.rs  semantic_tests.rs
crates/illuminate-bootstrap/: Cargo.toml
crates/illuminate-bootstrap/src/: adr.rs  agent_files.rs  candidate.rs  git_history.rs  interview.rs  lib.rs  orchestrate.rs  readme.rs  signals.rs
crates/illuminate-bootstrap/tests/: adr_test.rs  agent_files_test.rs  git_history_test.rs  interview_test.rs  orchestrate_test.rs  readme_test.rs
crates/illuminate-cli/: Cargo.toml
crates/illuminate-cli/src/: display.rs  lib.rs  main.rs
crates/illuminate-cli/src/commands/: ask.rs  ask_synthesize.rs  audit.rs  audit_diff.rs  audit_docs.rs  audit_pr.rs  bootstrap.rs  browse.rs  cloud.rs  decisions.rs  diagram.rs  doc_decay.rs  enrich.rs  entities.rs  explain.rs  export.rs  failure.rs  failures.rs  hook.rs  hook_install.rs  impact.rs  index.rs  ingest.rs  init.rs  log.rs  mcp.rs  mod.rs  models.rs  onboard.rs  oncall.rs  patterns.rs  publish.rs  query.rs  rebuild.rs  reflect.rs  search.rs  skill.rs  stats.rs  status.rs  summary.rs  (+7 more)
crates/illuminate-cli/tests/: ask_synthesize_smoke.rs  audit_diff_smoke.rs  audit_docs_smoke.rs  audit_hook_smoke.rs  audit_impact_smoke.rs  audit_pr_smoke.rs  cli_surface_smoke.rs  decisions_for_smoke.rs  diagram_smoke.rs  doc_accuracy_test.rs  doc_decay_smoke.rs  e2e_test.rs  end_to_end_audit.rs  explain_smoke.rs  extract_wiring_test.rs  failure_log_smoke.rs  golden_path_e2e.rs  hook_install_smoke.rs  ilm_alias_smoke.rs  impact_smoke.rs  onboard_smoke.rs  oncall_smoke.rs  patterns_smoke.rs  skill_build_smoke.rs  stats_tokens_smoke.rs  trust_check_smoke.rs  wiki_review_smoke.rs
crates/illuminate-config/: Cargo.toml
crates/illuminate-config/src/: lib.rs
crates/illuminate-config/tests/: config_tests.rs
crates/illuminate-core/: Cargo.toml
crates/illuminate-core/src/: error.rs  graph.rs  lib.rs  query.rs  types.rs
crates/illuminate-core/src/storage/: migrations.rs  mod.rs  sqlite.rs
crates/illuminate-core/tests/: core_tests.rs
crates/illuminate-embed/: Cargo.toml
crates/illuminate-embed/src/: encoder.rs  lib.rs
crates/illuminate-embed/tests/: embed_integration_test.rs
crates/illuminate-enrich/: Cargo.toml
crates/illuminate-enrich/src/: lib.rs
crates/illuminate-enrich/tests/: cookbook_test.rs  semantic_test.rs
crates/illuminate-index/: Cargo.toml
crates/illuminate-index/src/: diagram.rs  doc_decay.rs  edge_extract.rs  edges.rs  indexer.rs  lib.rs  storage.rs  symbols.rs
crates/illuminate-index/tests/: diagram_tests.rs  doc_decay_tests.rs  edge_extract_tests.rs  edges_tests.rs  index_tests.rs
crates/illuminate-ingest/: Cargo.toml
crates/illuminate-ingest/src/: lib.rs
crates/illuminate-ingest/tests/: opt_in_local_adapter_test.rs  prompt_cookbook_test.rs
crates/illuminate-mcp/: Cargo.toml
crates/illuminate-mcp/src/: http.rs  lib.rs  main.rs  prompts.rs  protocol.rs  resources.rs  server.rs  tools.rs
crates/illuminate-mcp/tests/: audit_impact_test.rs  e2e_test.rs  http_test.rs  missing_tools_test.rs  prompts_test.rs  protocol_test.rs  reflect_test.rs  resources_test.rs  version_test.rs
crates/illuminate-publish/: Cargo.toml
crates/illuminate-publish/src/: as_doc.rs  lib.rs
crates/illuminate-publish/tests/: as_doc_test.rs
crates/illuminate-reflect/: Cargo.toml
crates/illuminate-reflect/src/: lib.rs
crates/illuminate-reflect/tests/: reflect_tests.rs
crates/illuminate-route/: Cargo.toml
crates/illuminate-route/src/: lib.rs
crates/illuminate-route/tests/: route_tests.rs  token_and_symbols_test.rs
crates/illuminate-trail/: Cargo.toml
crates/illuminate-trail/src/: claude.rs  codex.rs  cursor.rs  import.rs  lib.rs  normalize.rs  raw.rs  record.rs  repo.rs  savings.rs  storage.rs  watcher.rs
crates/illuminate-trail/tests/: codex_tests.rs  cursor_tests.rs  import_test.rs  parse_test.rs  repo_test.rs  savings_test.rs  smoke.rs  storage_test.rs  watcher_test.rs
crates/illuminate-trail/tests/fixtures/: claude-session.jsonl
crates/illuminate-watch/: Cargo.toml
crates/illuminate-watch/src/: daemon.rs  git.rs  github.rs  lib.rs  signal.rs  webhook.rs
crates/illuminate-watch/tests/: git_parser_test.rs  watch_tests.rs
crates/illuminate-wiki/: Cargo.toml
crates/illuminate-wiki/src/: dashboard.rs  episode.rs  lib.rs  lint.rs  page.rs  render.rs  scaffold.rs  serve.rs  serve_cloud.rs  walk.rs  webapp.rs
crates/illuminate-wiki/tests/: episode_test.rs  lint_test.rs  page_test.rs  render_test.rs  scaffold_test.rs  serve_app_test.rs  serve_dashboard_api_test.rs  serve_dashboard_test.rs  serve_episodes_api_test.rs  walk_test.rs
db/: schema.sql
docs/: API_REFERENCE.md  ARCHITECTURE.md  AUDIT.md  BOOTSTRAP.md  CI.md  CLI.md  COMPETITIVE_ANALYSIS.md  CRATES.md  GETTING_STARTED.md  GLOSSARY.md  INGESTION.md  MCP.md  PHASES.md  PRD.md  PRIVACY.md  PRODUCT_OVERVIEW.md  README.md  ROADMAP.md  SCHEMA.md  SECURITY.md  SYSTEM_DESIGN.md  TECH_SPEC.md  architecture.md  code-graph-strategy.md  data-model.md  knowledge-layer.md  philosophy.md  product-overview.md  roadmap.md  trust-model.md
illuminate-web/: .gitignore  README.md  dashboard.html  illuminate-dashboard.css  illuminate-v4.js  index.html  package-lock.json  package.json  playwright.config.ts  verify-css.sh
scripts/: capture-screenshots.sh
web/: package.json  svelte.config.js  vite.config.ts
(+217 files in other folders)
