[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.8.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/rohansx/illuminate"
description = "Privacy-first knowledge graph engine for AI agents. Better quality, 6x cheaper than Graphiti."

[workspace.dependencies]
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
uuid = { version = "1", features = ["v7"] }
rusqlite = { version = "0.32", features = ["bundled", "vtab"] }
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
toml = "0.8"
gline-rs = "1.0"
ort = "=2.0.0-rc.9"
ndarray = "0.16"
fastembed = { version = "4", default-features = false, features = ["ort-download-binaries", "hf-hub-rustls-tls"] }
half = "2"
strsim = "0.11"
regex = "1"
sha2 = "0.10"
