[package]
name = "illuminate-audit"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Contextual linter for illuminate — cross-reference agent plans against the decision graph"

[dependencies]
illuminate = { version = "0.8.0", path = "../illuminate-core" }
illuminate-index = { version = "0.8.0", path = "../illuminate-index" }
illuminate-reflect = { version = "0.8.0", path = "../illuminate-reflect" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
toml = { workspace = true }
regex = "1"
