[package]
name = "illuminate-audit"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Contextual linter for illuminate — cross-reference agent plans against the decision graph"

[dependencies]
illuminate = { version = "0.24.0", path = "../illuminate-core" }
illuminate-config = { version = "0.24.0", path = "../illuminate-config" }
illuminate-embed = { version = "0.24.0", path = "../illuminate-embed" }
illuminate-index = { version = "0.24.0", path = "../illuminate-index" }
illuminate-reflect = { version = "0.24.0", path = "../illuminate-reflect" }
rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
toml = { workspace = true }
regex = "1"
tracing = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tempfile = "3"
