[package]
name = "illuminate-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "CLI for illuminate — local-first context graph engine"

[lib]
name = "illuminate_cli"
path = "src/lib.rs"

[[bin]]
name = "illuminate"
path = "src/main.rs"

# `ilm` — shorthand alias for `illuminate` (v3.2 roadmap). Shares the crate's
# library dispatch (`illuminate_cli::run`) so it is behaviorally identical with
# no duplicated command logic.
[[bin]]
name = "ilm"
path = "src/bin/ilm.rs"

[dependencies]
illuminate = { version = "0.23.0", path = "../illuminate-core" }
illuminate-extract = { version = "0.23.0", path = "../illuminate-extract" }
illuminate-mcp = { version = "0.23.0", path = "../illuminate-mcp" }
illuminate-embed = { version = "0.23.0", path = "../illuminate-embed" }
illuminate-watch = { version = "0.23.0", path = "../illuminate-watch" }
illuminate-index = { version = "0.23.0", path = "../illuminate-index" }
illuminate-audit = { version = "0.23.0", path = "../illuminate-audit" }
illuminate-reflect = { version = "0.23.0", path = "../illuminate-reflect" }
illuminate-route = { version = "0.23.0", path = "../illuminate-route" }
illuminate-enrich = { version = "0.23.0", path = "../illuminate-enrich" }
illuminate-publish = { version = "0.23.0", path = "../illuminate-publish" }
illuminate-ingest = { version = "0.23.0", path = "../illuminate-ingest" }
illuminate-trail = { version = "0.23.0", path = "../illuminate-trail" }
illuminate-wiki = { version = "0.23.0", path = "../illuminate-wiki" }
illuminate-bootstrap = { version = "0.23.0", path = "../illuminate-bootstrap" }
clap = { workspace = true }
rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true, features = ["full"] }
colored = "3"
dotenvy = "0.15"
toml = { workspace = true }
regex = { workspace = true }
tempfile = "3"

[dev-dependencies]
tempfile = "3"
illuminate-trail = { version = "0.23.0", path = "../illuminate-trail" }
chrono = { workspace = true }
serde_json = { workspace = true }
