[package]
name = "illuminate"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Core engine for illuminate — types, storage, query, temporal logic"

[dependencies]
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
rusqlite = { workspace = true }
toml = { workspace = true }
illuminate-extract = { path = "../illuminate-extract", version = "0.8.0", optional = true }
strsim = { workspace = true }

[features]
default = ["extract"]
extract = ["dep:illuminate-extract"]

[dev-dependencies]
tempfile = "3"
