[package]
name = "illuminate-enrich"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Pre-LLM prompt enrichment for illuminate — deterministic prompt rewriting with team context"

[dependencies]
illuminate = { version = "0.8.0", path = "../illuminate-core" }
illuminate-route = { version = "0.8.0", path = "../illuminate-route" }
illuminate-embed = { version = "0.8.0", path = "../illuminate-embed" }
illuminate-index = { version = "0.8.0", path = "../illuminate-index" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
sha2 = { workspace = true }
regex = { workspace = true }

[dev-dependencies]
tempfile = "3"
chrono = { workspace = true }
