[package]
name = "illuminate-index"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Minimal code indexer for illuminate — tree-sitter symbol extraction and decision anchoring"

[dependencies]
illuminate = { version = "0.8.0", path = "../illuminate-core" }
rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
sha2 = "0.10"
xxhash-rust = { version = "0.8", features = ["xxh3"] }
tree-sitter = "0.24"
tree-sitter-rust = "0.23"
tree-sitter-go = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-python = "0.23"
tree-sitter-java = "0.23"
tree-sitter-c = "0.23"

[dev-dependencies]
tempfile = "3"
