[package]
name = "illuminate-ingest"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Read-only adapters for external knowledge sources (local markdown, confluence, notion, github-wiki, …) — feeds into the illuminate graph"

[dependencies]
illuminate = { version = "0.23.0", path = "../illuminate-core" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
walkdir = "2"

[dev-dependencies]
tempfile = "3"
