[package]
name = "illuminate-publish"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Explicit publish gesture for illuminate — curate trail sessions into a team repo with per-session redaction"

[dependencies]
illuminate = { version = "0.22.0", path = "../illuminate-core" }
illuminate-trail = { version = "0.22.0", path = "../illuminate-trail" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tempfile = "3"
