[package]
name = "illuminate-wiki"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Markdown wiki layer for illuminate — parse, lint, render team-shared decision pages"

[dependencies]
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = "3"
